Closed Bug 391592 Opened 17 years ago Closed 17 years ago

IA2 states exposed incorrectly

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

(Blocks 1 open bug)

Details

(Keywords: access, Whiteboard: Low risk)

Attachments

(1 file)

The IA2-specific states are not at all exposed correctly.
Attachment #276039 - Flags: review?(surkov.alexander)
Comment on attachment 276039 [details] [diff] [review]
1) Remove else's from if block, 2) Report 0 extended states

r=me, though I'm not sure about NS_OK for those methods which aren't implemented. Why shouldn't we fail?
Attachment #276039 - Flags: review?(surkov.alexander) → review+
Attachment #276039 - Flags: approval1.9?
We shouldn't fail because there are in fact 0 of those extended states for that object at this time. Returning the fact that we know that is better than saying we don't know.
Thinking about it again, I guess I see how your point can be argued. I can still return E_NOIMPL there as long as we clear out the out param before we return. That part isn't a big deal to change.
Whiteboard: Low risk
(In reply to comment #4)
> Thinking about it again, I guess I see how your point can be argued. I can
> still return E_NOIMPL there as long as we clear out the out param before we
> return. That part isn't a big deal to change.
> 

That would be fine.
Blocks: 391482
Attachment #276039 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: