Bug 391592. IA2 states exposed incorrectly. r=surkov, a=dsicore